--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,10 +34,11 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="20dp"
         android:text="¿No tienes cuenta, Regístrate?"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button" />
 
@@ -45,11 +46,11 @@
         android:id="@+id/button2"
         android:layout_width="261dp"
         android:layout_height="61dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginBottom="80dp"
         android:text="Registrarse"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.553"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -57,7 +58,7 @@
         android:layout_width="162dp"
         android:layout_height="35dp"
         android:layout_marginTop="40dp"
-        android:text="Usuario"
+        android:text="Correo"
         android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -84,10 +85,11 @@
         android:layout_height="54dp"
         android:layout_marginTop="12dp"
         android:ems="10"
-        android:hint="Usuario"
+        android:hint="Correo"
+        android:maxLength="36"
         android:inputType="text"
         android:textAlignment="center"
-        android:textSize="30sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -102,11 +104,12 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="Contraseña"
+        android:maxLength="30"
         android:inputType="textPassword"
         android:textAlignment="center"
-        android:textSize="30sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
